<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:context=".view.AboutActivity">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageView"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/self_img"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/comp_about_email"
            style="@style/StyledContentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            app:layout_constraintStart_toStartOf="@+id/circleImageView"
            app:layout_constraintTop_toBottomOf="@+id/circleImageView" />

        <TextView
            android:id="@+id/tv_about_email"
            android:layout_width="wrap_content"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/dev_email"
            app:layout_constraintBottom_toBottomOf="@+id/comp_about_email"
            app:layout_constraintStart_toEndOf="@+id/comp_about_email"
            app:layout_constraintTop_toBottomOf="@+id/circleImageView" />

        <TextView
            android:id="@+id/comp_about_name"
            style="@style/StyledContentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            app:layout_constraintStart_toStartOf="@+id/circleImageView"
            app:layout_constraintTop_toBottomOf="@+id/tv_about_email" />

        <TextView
            android:id="@+id/tv_about_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dev_name"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/comp_about_name"
            app:layout_constraintStart_toStartOf="@+id/tv_about_email"
            app:layout_constraintTop_toBottomOf="@+id/tv_about_email" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_about_github"
            style="@style/StyledLayoutMargin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connect_github"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/circleImageView" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_about_instagram"
            style="@style/StyledLayoutMargin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/conect_ig"
            app:layout_constraintTop_toBottomOf="@+id/btn_about_github"
            tools:layout_editor_absoluteX="16dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
