<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/comp_season_layout_detail"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:text="@string/season"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_season_layout_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@tools:sample/us_zipcodes" />

    <TextView
        android:id="@+id/comp_rating_layout_detail"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/rating"
        app:layout_constraintStart_toStartOf="@id/comp_season_layout_detail"
        app:layout_constraintTop_toBottomOf="@+id/tv_season_layout_detail" />
    <TextView
        android:id="@+id/tv_rating_layout_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/tv_season_layout_detail"
        tools:text="@tools:sample/us_zipcodes" />

    <TextView
        android:id="@+id/comp_episode_layout_detail"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/episode"
        app:layout_constraintStart_toStartOf="@id/comp_rating_layout_detail"
        app:layout_constraintTop_toBottomOf="@+id/tv_rating_layout_detail" />
    <TextView
        android:id="@+id/tv_episode_layout_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/tv_rating_layout_detail"
        tools:text="@tools:sample/us_zipcodes" />

    <TextView
        android:id="@+id/comp_synopsis_layout_detail"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/synopsis"
        app:layout_constraintStart_toStartOf="@id/comp_episode_layout_detail"
        app:layout_constraintTop_toBottomOf="@+id/tv_episode_layout_detail" />
    <TextView
        android:id="@+id/tv_synopsis_layout_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/tv_episode_layout_detail"
        tools:text="@tools:sample/lorem/random" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="117dp" />


</androidx.constraintlayout.widget.ConstraintLayout>